fixed navbar and overlapping logos
- when opening the side navbar, it was bringing back to the top of the index page: fixed the issue
- fixed the logo overlapping with longer titles on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -338,7 +338,13 @@ nav li a:hover {
     }
 }
 
-@media (max-width: 475px) {
+@media (max-width: 620px) { /*adjust margin so long title doesn't go under logo*/
+    .long-title {
+        margin-right: 10rem;
+    }
+}
+
+@media (max-width: 550px) {
     .two-col {
         margin-left: 1rem;
         margin-right: 3rem;
